--- a/sampson.html
+++ b/sampson.html
@@ -78,7 +78,7 @@
         <img src="images/chua75.jpg" alt="Amy Chua photo">
         
         <h3>February<br>
-        <a href="speakers/sampson.html">Scott Sampson</a>
+        <a href="sampson.html">Scott Sampson</a>
         </h3>
 		<h3><img src="images/sampson75.jpg" alt="picture of Scott Sampson">
         <a href="index.html">Return to Homepage</a>
